--- a/Scss/_config.scss
+++ b/Scss/_config.scss
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 $primary-color: #a855f7;
 $primary-color-dark: #9333ea;
 $secondary-color: #ca8a04;
