--- a/Scss/_config.scss
+++ b/Scss/_config.scss
@@ -1,5 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
+@charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+/******* Fonts Import Start **********/
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+/********* Fonts Face CSS End **********/
+
 
 $primary-color: #a855f7;
 $primary-color-dark: #9333ea;
@@ -16,15 +21,66 @@ $max-width: 1200px;
     box-sizing: border-box;
 }
 
+
 a {
     text-decoration: none;
-    color: #000000;
+    color: inherit;
+    outline: none;
+    transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
 }
 
-ul {
+a:focus,
+a:active,
+a:visited,
+a:hover {
+    text-decoration: none;
+    outline: none;
+}
+
+a:hover {
+    color: #e73700;
+}
+
+
+ul,
+ol {
     list-style-type: none;
 }
 
+
+
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+}
+
+.clear {
+    clear: both;
+}
+
+img {
+    max-width: 100%;
+    border: 0px;
+}
+
+
+h2 {
+    margin-bottom: 48px;
+    padding-bottom: 16px;
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 700;
+    position: relative;
+    text-transform: capitalize;
+}
+
+h3 {
+    margin: 0 0 10px;
+    font-size: 28px;
+    line-height: 36px;
+}
+
+button {
+    outline: none !important;
 }
