--- a/Scss/_nav.scss
+++ b/Scss/_nav.scss
@@ -81,7 +81,7 @@ nav {
                 width: 100%;
                 height: calc(100vh - 85px);
                 left: -100%;
-                top: 85px;
+                top: 50px;
                 background-color: $extra-light;
                 flex-direction: column;
                 justify-content: center;
@@ -96,6 +96,7 @@ nav {
 
             #check:checked~ul {
                 left: 0;
+                top: 0;
             }
 
         }
