--- a/Scss/_project.scss
+++ b/Scss/_project.scss
@@ -1,96 +1,237 @@
-body {
-    font-family: 'Open Sans', sans-serif;
+.project-section {
+    background-color: #faf5ff;
     height: 100vh;
+}
 
-    .slider-container {
+/* -------- title style ------- */
+.line-title {
+    position: relative;
+    width: 400px;
+    top: 48px;
+    left: 20px;
+}
+
+.line-title::before,
+.line-title::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 4px;
+    border-radius: 2px;
+}
+
+.line-title::before {
+    width: 100%;
+    background: #f2f2f2;
+}
+
+.line-title::after {
+    width: 32px;
+    background: #e73700;
+}
+
+/******* Middle section CSS Start ******/
+/* -------- Landing page ------- */
+.project-section {
+    padding: 60px 50px;
+}
+
+.project-section .owl-stage {
+    margin: 15px 0;
+    display: flex;
+    display: -webkit-flex;
+}
+
+.project-section .item {
+    margin: 0 15px 60px;
+    width: 320px;
+    height: 400px;
+    display: flex;
+    align-content: flex-end;
+    // display: -webkit-flex;
+    align-items: flex-end;
+    -webkit-align-items: flex-end;
+    background: #343434 no-repeat center center / cover;
+    border-radius: 16px;
+    overflow: hidden;
+    position: relative;
+    transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    cursor: pointer;
+}
+
+.project-section .item.active {
+    width: 500px;
+    box-shadow: 12px 40px 40px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 12px 40px 40px rgba(0, 0, 0, 0.25);
+}
+
+.project-section .item:after {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    background-image: linear-gradient(#a855f700, rgb(0 0 0));
+}
+
+.project-section .item-desc {
+    padding: 0 24px 12px;
+    color: #fff;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    transform: translateY(calc(100% - 54px));
+    -webkit-transform: translateY(calc(100% - 54px));
+    transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+}
+
+.project-section .item.active .item-desc {
+    transform: none;
+    -webkit-transform: none;
+}
+
+.project-section .item-desc p {
+    opacity: 0;
+    -webkit-transform: translateY(32px);
+    transform: translateY(32px);
+    transition: all 0.4s ease-in-out 0.2s;
+    -webkit-transition: all 0.4s ease-in-out 0.2s;
+}
+
+.project-section .item.active .item-desc p {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+}
+
+.project-section .owl-theme.custom-carousel .owl-dots {
+    margin-top: -20px;
+    position: relative;
+    z-index: 5;
+}
+
+/******** Middle section CSS End *******/
+
+/***** responsive css Start ******/
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    h2 {
+        margin-bottom: 32px;
+    }
+
+    h3 {
+        margin: 0 0 8px;
+        font-size: 24px;
+        line-height: 32px;
+    }
+
+    /* -------- Landing page ------- */
+    .project-section {
+        padding: 50px 30px;
+    }
+
+    .project-section .item {
+        margin: 0 12px 60px;
+        width: 260px;
+        height: 360px;
+    }
+
+    .project-section .item.active {
+        width: 400px;
+    }
+
+    .project-section .item-desc {
+        transform: translateY(calc(100% - 46px));
+        -webkit-transform: translateY(calc(100% - 46px));
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    h2 {
+        margin-bottom: 32px;
+    }
+
+    h3 {
+        margin: 0 0 8px;
+        font-size: 24px;
+        line-height: 32px;
+    }
+
+    .line-title {
+        width: 330px;
+    }
+
+    /* -------- Landing page ------- */
+    .project-section {
+        padding: 50px 30px 40px;
+    }
+
+    .project-section .item {
+        margin: 0 12px 60px;
+        width: 240px;
+        height: 330px;
+    }
+
+    .project-section .item.active {
+        width: 360px;
+    }
+
+    .project-section .item-desc {
+        transform: translateY(calc(100% - 42px));
+        -webkit-transform: translateY(calc(100% - 42px));
+    }
+}
+
+@media (max-width: 767px) {
+    body {
+        font-size: 14px;
+    }
+
+    h2 {
+        margin-bottom: 20px;
+    }
+
+    h3 {
+        margin: 0 0 8px;
+        font-size: 15px;
+        line-height: 24px;
+    }
+
+    .line-title {
+        width: 250px;
+        top: 48px;
+    }
+
+    /* -------- Landing page ------- */
+    .project-section {
+        padding: 30px 15px 20px;
         position: relative;
-        overflow: hidden;
-        width: 100vw;
-        height: 100vh;
+        top: 50px;
+    }
 
+    .project-section .item {
+        margin: 0 10px 40px;
+        width: 200px;
+    }
 
-        .left-slide {
-            height: 100%;
-            width: 35%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            transition: transform 0.5s ease-in-out;
+    .project-section .item.active {
+        width: 270px;
+        box-shadow: 6px 10px 10px rgba(0, 0, 0, 0.25);
+        -webkit-box-shadow: 6px 10px 10px rgba(0, 0, 0, 0.25);
+    }
 
-            div {
-                height: 100%;
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                color: #fff;
-                text-align: center;
+    .project-section .item-desc {
+        padding: 0 14px 5px;
+        transform: translateY(calc(100% - 42px));
+        -webkit-transform: translateY(calc(100% - 42px));
+    }
 
-
-                h1 {
-                    font-size: 40px;
-                    margin-bottom: 10px;
-                    margin-top: -30px;
-
-                }
-            }
-
-        }
-
-        .right-slide {
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 45%;
-            width: 55%;
-            transition: transform 0.5s ease-in-out;
-
-            div {
-                background-repeat: no-repeat;
-                background-size: contain;
-                background-position: center center;
-                height: 100%;
-                width: 100%;
-            }
-        }
-
-        button {
-            background-color: #fff;
-            border: none;
-            color: #aaa;
-            cursor: pointer;
-            font-size: 16px;
-            padding: 15px;
-        }
-
-        button:hover {
-            color: #222;
-        }
-
-        button:focus {
-            outline: none;
-        }
-
-        .action-buttons {
-            button {
-                position: absolute;
-                left: 35%;
-                top: 50%;
-                z-index: 100;
-            }
-
-            .down-button {
-                transform: translateX(-100%);
-                border-top-left-radius: 5px;
-                border-bottom-left-radius: 5px;
-            }
-
-            .up-button {
-                transform: translateY(-100%);
-                border-top-right-radius: 5px;
-                border-bottom-right-radius: 5px;
-            }
-        }
+    .owl-carousel .owl-stage-outer {
+        margin: 42px 0 auto;
     }
 }
