--- a/Scss/style.scss
+++ b/Scss/style.scss
@@ -1,10 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
-
 @import "config";
 @import "nav";
 @import "home";
 @import "about";
 @import "resume";
+@import "project";
 
 .section {
     background-color: $extra-light;
